array.island.Island.scala.code
def island(num:Array[Int]): Int = {
  var nbNiveaux=0
  var a=num.size
  for (k<-0 to (a-1){
    if (num(k)>num(k-1)){
      nbNiveaux=nbNiveaux +1
    }
  }
}